# lazyframe

./: README.md  pyproject.toml
tests/: test_lazyframe.py
